<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOIOEPQ</string>
    <string name="action_settings">Settings</string>
    <string name="button_right">Right</string>
    <string name="button_left">Left</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="seek_speed_text">Speed:</string>
    <string name="static_status_text">Status:</string>
    <string name="dynamic_status_text">Disconnected</string>
    <string name="dynamic_speed_percent">100%</string>

</resources>
