<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_up"
        android:layout_toRightOf="@+id/btn_up"
        android:contentDescription="@string/button_right"
        android:src="@drawable/button_right" />

    <ImageButton
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_up"
        android:layout_toLeftOf="@+id/btn_up"
        android:contentDescription="@string/button_left"
        android:src="@drawable/button_left" />

    <ImageButton
        android:id="@+id/btn_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_up"
        android:layout_below="@+id/btn_right"
        android:contentDescription="@string/button_down"
        android:src="@drawable/button_down" />

    <ImageButton
        android:id="@+id/btn_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:contentDescription="@string/button_up"
        android:src="@drawable/button_up" />

    <TextView
        android:id="@+id/static_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_left"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:text="@string/static_status_text" />

    <TextView
        android:id="@+id/dynamic_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/static_status_text"
        android:layout_alignBottom="@+id/static_status_text"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/static_status_text"
        android:text="@string/dynamic_status_text" />

</RelativeLayout>
